--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
+    "babel": "^6.23.0",
+    "bootstrap": "^4.5.3",
+    "compass": "^0.1.1",
+    "css-loader": "^5.0.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -19,6 +24,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sass-loader": "^10.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
